--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@adraffy/ens-normalize": "^1.10.0",
+    "@aws-sdk/client-s3": "^3.525.0",
     "@ensdomains/ens-avatar": "0.3.6",
     "@ensdomains/ensjs": "^3.0.0-alpha.67",
     "@types/lodash": "^4.14.170",
